--- a/movies.html
+++ b/movies.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <section class="movie-section">
-    <h2>Kommende film</h2>
+    <h2>Movie Manager</h2>
     <div class="movie-grid" id="movie-grid">
         <!-- Movies will be dynamically injected here -->
     </div>
